[package]
authors = ["Pranav Bodawala <b.pranav.k@gmail.com>"]
edition = "2018"
name = "sauce-me"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4.5"
